packages/webassemblyjs/test/fixtures/type-errors/store/module.wast
(module (memory 1) (func (i64.store (f32.const 0) (i32.const 0))))
